# Convolve

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_SUMMARY.md  COMPLETE_FILE_LISTING.md  COMPLETION_REPORT.md  DELIVERY_SUMMARY.md  DEPLOY.md  DOCS.md  ENHANCEMENTS_IMPLEMENTED.md  ENHANCEMENTS_ROADMAP.md  GETTING_STARTED.md  IMPLEMENTATION_CHECKLIST.md  QUICKSTART.md  README.md  REFERENCE.md  SCALING_GUIDE.md  SETUP.md  START_HERE.md  SYSTEM_ARCHITECTURE.md  SYSTEM_OVERVIEW.md  TODO.md  UAILS_COMPLETE_INDEX.md  VERIFICATION_FINAL.md  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
app/: page.tsx
app/graph/: page.tsx
app/query/: page.tsx
langgraph-service/: main.py  pyproject.toml  requirements.txt
langgraph-service/agents/: ingestion.py  other_agents.py
langgraph-service/models/: state.py
langgraph-service/storage/: neo4j_client.py  qdrant_client.py
langgraph-service/workflows/: knowledge_workflow.py  reasoning_workflow.py
lib/: tasks.md
lib/agents/: complete-agents.ts  ingestion-agent.ts  langgraph-client.ts  orchestrator.ts  other-agents.ts
lib/config/: langgraph.ts  storage.ts
lib/generators/: procedural-knowledge.ts  relationship-generator.ts
lib/services/: batch-ingest.ts  batch-ingestion.ts  confidence-propagation.ts  consolidation-engine.ts  embedding-engine.ts  entity-resolution.ts  explanation-generator.ts  graph-partitioner.ts  ingestion-complete.ts  ingestion.test.ts  ingestion.ts  knowledge-gap-detection.ts  knowledge-graph.ts  memory-decay.test.ts  (+6 more)
scripts/: scale-dataset.ts  seed-demo-data.ts  start-langgraph.sh
(+29 files in other folders)
